AG-10421 - Prevent docs header flickers (#7688)

--- a/documentation/ag-grid-docs/src/design-system/modules/Search.module.scss
+++ b/documentation/ag-grid-docs/src/design-system/modules/Search.module.scss
@@ -51,4 +51,16 @@
     margin-left: auto;
     opacity: 0.8;
     font-size: var(--text-fs-sm);
+
+    animation: fadeIn 0.2s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
